testdata/baselines/reference/submodule/compiler/argumentsReferenceInConstructor3_Js.errors.txt
/a.js(11,13): error TS8010: Type annotations can only be used in TypeScript files.


==== /a.js (1 errors) ====
    class A {
    	get arguments() {
    		return { bar: {} };
    	}
    }
    
    class B extends A {
    	/**
    	 * Constructor
    	 *
    	 * @param {object} [foo={}]
    	           ~~~~~~
!!! error TS8010: Type annotations can only be used in TypeScript files.
    	 */
    	constructor(foo = {}) {
    		super();
    
    		/**
    		 * @type object
    		 */
    		this.foo = foo;
    
    		/**
    		 * @type object
    		 */
    		this.bar = super.arguments.foo;
    	}
    }
    